styles bug fix/improvements

--- a/index.html
+++ b/index.html
@@ -20,27 +20,25 @@
         }
         #centerlayer {
             position: absolute;
-            width: 274px;
-            height: 402px;
+            width: 280px;
             left: 50%;
             top: 50%;
-            margin-left: -137px;
-            margin-top: -201px;
-            overflow: hidden;
+            margin-left: -140px;
+            margin-top: -200px;
         }
         .digit {
             font-size: 10em;
             text-align: center;
             background: #999;
             color: #666;
-            padding-top: 120px;
+            padding: 120px 0 0;
         }
         .letter {
             text-align: center;
             font-size: 5em;
             color: #999;
             background: #666;
-            padding-bottom: 10px;
+            padding: 0 0 10px;
         }
         .content {
             font-size: 1.7em;
@@ -48,8 +46,7 @@
             color: gray;
         }
         .content p {
-            margin: 10px 0 0 0;
-            /*padding: 0;*/
+            margin: 10px 0 0;
         }
     </style>
 </head>
